add base plugin for zappy

--- a/gradle.properties
+++ b/gradle.properties
@@ -4,12 +4,12 @@ org.gradle.parallel = true
 org.gradle.warning.mode = all
 
 authors = ["Ryderbelserion"]
-website = https://github.com/ryderbelserion/PluginTemplate
-sources = https://github.com/ryderbelserion/PluginTemplate
-issues = https://github.com/ryderbelserion/PluginTemplate/issues
+website = https://github.com/ryderbelserion/WeatherExtras
+sources = https://github.com/ryderbelserion/WeatherExtras
+issues = https://github.com/ryderbelserion/WeatherExtras/issues
 
-group = com.ryderbelserion.template
-description = A plugin template.
-version = 0.3
+group = com.ryderbelserion.zappy
+description = Alter or improve how weather currently functions on a server.
+version = 0.1
 
-mcVersion= = 1.21
+mcVersion = 1.21
