--- a/run/spigot.yml
+++ b/run/spigot.yml
@@ -22,6 +22,8 @@ settings:
   user-cache-size: 1000
   netty-threads: 4
   attribute:
+    maxAbsorption:
+      max: 2048.0
     maxHealth:
       max: 2048.0
     movementSpeed:
@@ -59,6 +61,7 @@ players:
   disable-saving: false
 world-settings:
   default:
+    unload-frozen-chunks: false
     seed-trialchambers: 94251327
     below-zero-generation-in-existing-chunks: true
     hanging-tick-frequency: 100
@@ -137,7 +140,7 @@ world-settings:
       sprint-multiplier: 0.1
       other-multiplier: 0.0
     enable-zombie-pigmen-portal-spawns: true
-    thunder-chance: 100000
+    thunder-chance: 4000
     growth:
       cactus-modifier: 100
       cane-modifier: 100
@@ -171,6 +174,9 @@ world-settings:
     view-distance: default
     item-despawn-rate: 6000
     nerf-spawner-mobs: false
+    verbose: false
+  world:
+    thunder-chance: 4000
     verbose: false
 config-version: 12
 stats:
